--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,5 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
 //PhotView
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 }
