--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,14 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_avatar_round"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_avatar"
         android:supportsRtl="true"
         android:theme="@style/FullScreen">
         <activity android:name=".Search"></activity>
         <activity android:name=".Details" />
-        <activity android:name=".Home" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".Home">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
